<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/label_cabecalho"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <!-- Tarefa 1 -->
    <LinearLayout style="@style/contentor_geral">

        <View style="@style/linha_separacao" />

        <TextView
            style="@style/titulo_seccao"
            android:text="@string/shared_preferences" />

        <EditText
            android:id="@+id/editText1"
            style="@style/editText"
            android:hint="@string/sharedPrefencesEditText"
            android:inputType="text"
            android:text="" />

        <LinearLayout style="@style/contentor_horizontal">

            <Button
                android:id="@+id/btWrite1"
                style="@style/buttonWrite"
                android:layout_marginRight="10dp"
                android:text="@string/btWrite" />

            <Button
                android:id="@+id/btRead1"
                style="@style/buttonRead"
                android:layout_marginLeft="10dp"
                android:text="@string/btRead" />
        </LinearLayout>
    </LinearLayout>

    <!-- Tarefa 2 -->
    <LinearLayout style="@style/contentor_geral">

        <View style="@style/linha_separacao" />

        <TextView
            style="@style/titulo_seccao"
            android:text="@string/shared_preferencesMultiFich" />

        <LinearLayout style="@style/contentor_horizontal">

            <EditText
                android:id="@+id/editText2a"
                style="@style/editText"
                android:hint="@string/sharedPreferencesNome"
                android:inputType="text"
                android:text="" />

            <EditText
                android:id="@+id/editText2b"
                style="@style/editText"
                android:hint="@string/sharedPreferencesIdade"
                android:inputType="number"
                android:text="" />
        </LinearLayout>

        <LinearLayout style="@style/contentor_horizontal">

            <Button
                android:id="@+id/btWrite2"
                style="@style/buttonWrite"
                android:layout_marginRight="10dp"
                android:text="@string/btWrite" />

            <Button
                android:id="@+id/btRead2"
                style="@style/buttonRead"
                android:layout_marginLeft="10dp"
                android:text="@string/btRead" />
        </LinearLayout>
    </LinearLayout>


    <!-- Tarefa 3 - Cache -->
    <LinearLayout style="@style/contentor_geral">

        <View style="@style/linha_separacao" />

        <TextView
            style="@style/titulo_seccao"
            android:text="@string/Cache" />

        <LinearLayout style="@style/contentor_horizontal">

            <EditText
                android:id="@+id/editText3a"
                style="@style/editText"
                android:hint="@string/sharedPreferencesNome"
                android:inputType="text"
                android:text="" />

            <EditText
                android:id="@+id/editText3b"
                style="@style/editText"
                android:hint="@string/sharedPreferencesIdade"
                android:inputType="number"
                android:text="" />
        </LinearLayout>

        <LinearLayout style="@style/contentor_horizontal">

            <Button
                android:id="@+id/btWrite3"
                style="@style/buttonWrite"
                android:layout_marginRight="10dp"
                android:text="@string/btWrite" />

            <Button
                android:id="@+id/btRead3"
                style="@style/buttonRead"
                android:layout_marginLeft="10dp"
                android:text="@string/btRead" />
        </LinearLayout>
    </LinearLayout>


    <!-- Tarefa 4 - Internal Storage -->
    <LinearLayout style="@style/contentor_geral">

        <View style="@style/linha_separacao" />

        <TextView
            style="@style/titulo_seccao"
            android:text="@string/internal_storage" />

        <LinearLayout style="@style/contentor_horizontal">

            <EditText
                android:id="@+id/editText4a"
                style="@style/editText"
                android:hint="@string/sharedPreferencesNome"
                android:inputType="text"
                android:text="" />

            <EditText
                android:id="@+id/editText4b"
                style="@style/editText"
                android:hint="@string/sharedPreferencesIdade"
                android:inputType="number"
                android:text="" />
        </LinearLayout>

        <LinearLayout style="@style/contentor_horizontal">

            <Button
                android:id="@+id/btWrite4"
                style="@style/buttonWrite"
                android:layout_marginRight="10dp"
                android:text="@string/btWrite" />

            <Button
                android:id="@+id/btRead4"
                style="@style/buttonRead"
                android:layout_marginLeft="10dp"
                android:text="@string/btRead" />
        </LinearLayout>
    </LinearLayout>



    <!-- Tarefa 5 - External Storage -->
    <LinearLayout style="@style/contentor_geral">

        <View style="@style/linha_separacao" />

        <TextView
            style="@style/titulo_seccao"
            android:text="@string/external_storage" />

        <LinearLayout style="@style/contentor_horizontal">

            <EditText
                android:id="@+id/editText5a"
                style="@style/editText"
                android:hint="@string/sharedPreferencesNome"
                android:inputType="text"
                android:text="" />

            <EditText
                android:id="@+id/editText5b"
                style="@style/editText"
                android:hint="@string/sharedPreferencesIdade"
                android:inputType="number"
                android:text="" />
        </LinearLayout>

        <LinearLayout style="@style/contentor_horizontal">

            <Button
                android:id="@+id/btWrite5"
                style="@style/buttonWrite"
                android:layout_marginRight="10dp"
                android:text="@string/btWrite" />

            <Button
                android:id="@+id/btRead5"
                style="@style/buttonRead"
                android:layout_marginLeft="10dp"
                android:text="@string/btRead" />
        </LinearLayout>
    </LinearLayout>



    <View style="@style/linha_separacao" />


<TextView
    android:id="@+id/textMsgErro"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />
</LinearLayout>